--- a/res/data/projects.json
+++ b/res/data/projects.json
@@ -14,7 +14,7 @@
             "date": 2022,
             "purpose": "personnal",
             "language": "godot",
-            "thumb": "../res/img/projects/cloudChaos.png",
+            "thumb": "./res/img/projects/cloudChaos.png",
             "containerId": "video-games",
             "description": "Cloud Chaos est un jeu android codé à l'aide de Godot Engine. Dans ce dernier, votre but est de défendre un bébé nuage, attaqué par des monstres. Il est possible d'améliorer le protagoniste, permettant ainsi de faire des parties plus longues et obtenir un meilleur score."
         },
@@ -23,7 +23,7 @@
             "date": 2022,
             "purpose": "personnal",
             "language": "godot",
-            "thumb": "../res/img/projects/seedKeeper.png",
+            "thumb": "./res/img/projects/seedKeeper.png",
             "containerId": "video-games",
             "description": "Seed Keeper est un jeu de sensibilisation à l'utilisation des produits chimiques dans l'agriculture. Je l'ai créé à l'occasion d'une campagne menée dans mon établissement scolaire. L'objectif est de cultiver des plantatations de différentes sortes, afin de dévelpper son commerce. On peut soit choisir de planter du bio, soit de l'hybride."
         },
@@ -32,7 +32,7 @@
             "date": 2022,
             "purpose": "educational",
             "language": "java",
-            "thumb": "../res/img/projects/odomo.png",
+            "thumb": "./res/img/projects/odomo.png",
             "containerId": "algorithmic",
             "description": ""
         },
@@ -41,7 +41,7 @@
             "date": 2023,
             "purpose": "educational",
             "language": "java",
-            "thumb": "../res/img/projects/biosphere7.png",
+            "thumb": "./res/img/projects/biosphere7.png",
             "containerId": "algorithmic"
         },
         {
@@ -49,7 +49,7 @@
             "date": 2022,
             "purpose": "educational",
             "language": "bash",
-            "thumb": "../res/img/projects/butgames.png",
+            "thumb": "./res/img/projects/butgames.png",
             "containerId": "algorithmic",
             "description": "Ce projet consistait à configurer une machine virtuelle de manière à ce qu'elle soit utilisable par un futur développeur. Cela inclut donc l'installation de la machine, la création des utilisateurs avec différents privilèges, l'installation de VS Code, le paramétrage de Git..."
         },
@@ -58,7 +58,7 @@
             "date": 2022,
             "purpose": "educational",
             "language": "bash",
-            "thumb": "../res/img/projects/blog.png",
+            "thumb": "./res/img/projects/blog.png",
             "containerId": "algorithmic",
             "description": "Ce logiciel en ligne de commande permet de gérer l'édition de plusieurs fichier au format markdown. On peut alors éditer un fichier via l'éditeur par défaut de la machine, lister les fichiers créés avec de logiciel, ainsi que les supprimer. Le logiciel permet également de convertir les fichiers markdown au format HTML au PDF. On peut ensuite visualiser les rendus."
         },
@@ -67,7 +67,7 @@
             "date": 2022,
             "purpose": "educational",
             "language": "html",
-            "thumb": "../res/img/projects/2ivf.png",
+            "thumb": "./res/img/projects/2ivf.png",
             "containerId": "web",
             "description": "2IVF est un site internet fictif proposant des analyses PESTEL et des présentations d'entreprises du secteur technologique."
         },
@@ -76,7 +76,7 @@
             "date": 2022,
             "purpose": "educational",
             "language": "sql",
-            "thumb": "../res/img/projects/billetconcert.png",
+            "thumb": "./res/img/projects/billetconcert.png",
             "containerId": "web"
         },
         {
@@ -84,7 +84,7 @@
             "date": 2022,
             "purpose": "educational",
             "language": "none",
-            "thumb": "../res/img/projects/capgemini.png",
+            "thumb": "./res/img/projects/capgemini.png",
             "containerId": "gestion-com"
         }
     ]
